Init user data when active uuid is changed.

--- a/frontend/core/src/main/webapp/index_devel.html
+++ b/frontend/core/src/main/webapp/index_devel.html
@@ -80,8 +80,8 @@
     <script src="static/js/services/tasks.js"></script>
     <script src="static/js/services/authenticate.js"></script>
     
-    <script type='application/javascript' src="static/lib/fastclick.js"></script>
-    <script type="application/javascript">
+    <script src="static/lib/fastclick.js"></script>
+    <script>
         window.addEventListener('load', function() {
             FastClick.attach(document.body);
         }, false);
