--- a/frontend/core/src/main/webapp/index.html
+++ b/frontend/core/src/main/webapp/index.html
@@ -6,7 +6,7 @@
     <meta name="fragment" content="!" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
     <meta name="apple-mobile-web-app-capable" content="yes">
-    <meta name="apple-mobile-web-app-status-bar-style" content="black-transcluent">
+    <meta name="apple-mobile-web-app-status-bar-style" content="default">
     <title ng-bind="page.getTitle()"></title>
     <link rel="stylesheet" href="static/css/em.css"/>
   </head>
