Added favicon to packaging

--- a/frontend/core/src/main/webapp/index.html
+++ b/frontend/core/src/main/webapp/index.html
@@ -9,6 +9,7 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="default">
     <title ng-bind="page.getTitle()"></title>
     <link rel="stylesheet" href="static/css/em.css"/>
+    <link rel="shortcut icon" href="static/favicon.ico"/>
   </head>
   <body>
 
