--- a/frontend/core/src/main/webapp/index_devel.html
+++ b/frontend/core/src/main/webapp/index_devel.html
@@ -9,7 +9,7 @@
     <title ng-bind="pageTitle.getTitle()"></title>
     <link rel="stylesheet/less" href="static/less/em.less"/>
     <script src="static/lib/less/less-min.js"></script>
-
+    <link rel="shortcut icon" href="landing/favicon.ico"/>
 </head>
 <body>
 
