--- a/frontend/core/src/main/webapp/index_devel.html
+++ b/frontend/core/src/main/webapp/index_devel.html
@@ -58,6 +58,7 @@
 
     <script src="static/js/controllers/tasks/context.js"></script>
     <script src="static/js/controllers/tasks/edit.js"></script>
+    <script src="static/js/controllers/tasks/inbox.js"></script>
     <script src="static/js/controllers/tasks/new.js"></script>
     <script src="static/js/controllers/tasks/project.js"></script>
     <script src="static/js/controllers/tasks/today.js"></script>
