--- a/frontend/core/src/main/webapp/index_devel.html
+++ b/frontend/core/src/main/webapp/index_devel.html
@@ -48,6 +48,7 @@
     <script src="static/js/controllers/notes.js"></script>
     <script src="static/js/controllers/omniBar.js"></script>
     <script src="static/js/controllers/pageNotFound.js"></script>
+    <script src="static/js/controllers/signup.js"></script>
     <script src="static/js/controllers/tasks.js"></script>
 
     <script src="static/js/controllers/my/notes.js"></script>
