Switched angular carousel to idangero.us swiper.

--- a/frontend/core/src/main/webapp/index_devel.html
+++ b/frontend/core/src/main/webapp/index_devel.html
@@ -10,6 +10,9 @@
     <link rel="stylesheet/less" href="static/less/em.less"/>
     <script src="static/lib/less/less-min.js"></script>
     <link rel="shortcut icon" href="landing/favicon.ico"/>
+    <link rel="stylesheet" href="static/lib/idangerous/idangerous.swiper.css"/>
+    <script defer src="static/lib/idangerous/idangerous.swiper-2.3.js"></script>
+
 </head>
 <body>
 
@@ -64,7 +67,6 @@
     <script src="static/js/controllers/tasks/project.js"></script>
     <script src="static/js/controllers/tasks/today.js"></script>
 
-    <script src="static/js/directives/carousel.js"></script>
     <script src="static/js/directives/emDirectives.js"></script>
     <script src="static/js/directives/items.js"></script>
     <script src="static/js/directives/notes.js"></script>
@@ -72,7 +74,6 @@
 
     <script src="static/js/filters/emFilters.js"></script>
 
-    <script src="static/js/services/carousel.js"></script>
     <script src="static/js/services/emServices.js"></script>
     <script src="static/js/services/errorHandler.js"></script>
     <script src="static/js/services/httpHandler.js"></script>
