--- a/frontend/core/src/main/webapp/index_devel.html
+++ b/frontend/core/src/main/webapp/index_devel.html
@@ -70,6 +70,7 @@
     <script src="static/js/directives/emDirectives.js"></script>
     <script src="static/js/directives/items.js"></script>
     <script src="static/js/directives/notes.js"></script>
+    <script src="static/js/directives/swiper.js"></script>
     <script src="static/js/directives/tasks.js"></script>
 
     <script src="static/js/filters/emFilters.js"></script>
