--- a/frontend/core/src/main/webapp/index_devel.html
+++ b/frontend/core/src/main/webapp/index_devel.html
@@ -10,8 +10,6 @@
     <link rel="stylesheet/less" href="static/less/em.less"/>
     <script src="static/lib/less/less-min.js"></script>
     <link rel="shortcut icon" href="landing/favicon.ico"/>
-    <link rel="stylesheet" href="static/lib/idangerous/idangerous.swiper.css"/>
-    <script defer src="static/lib/idangerous/idangerous.swiper-2.3.js"></script>
 
 </head>
 <body>
@@ -85,6 +83,8 @@
     <script src="static/js/services/tags.js"></script>
     <script src="static/js/services/tasks.js"></script>
     <script src="static/js/services/authenticate.js"></script>
+
+    <script src="static/lib/idangerous/idangerous.swiper-2.3.js"></script>
 
     <script src="static/lib/fastclick.js"></script>
     <script>
