--- a/frontend/core/src/main/webapp/index.html
+++ b/frontend/core/src/main/webapp/index.html
@@ -18,6 +18,7 @@
   </div>
 
   <script src="static/em.min.js"></script>
+  <script src="static/lib/localytics.js"></script>
   <script>
     window.addEventListener('load', function() {
       FastClick.attach(document.body);
