--- a/frontend/core/src/main/webapp/index_devel.html
+++ b/frontend/core/src/main/webapp/index_devel.html
@@ -10,7 +10,9 @@
     <link rel="stylesheet/less" href="static/less/em.less"/>
     <script src="static/lib/less/less-min.js"></script>
     <link rel="shortcut icon" href="landing/favicon.ico"/>
-
+    <script>
+    var analyticsKey = 'd467fb835d4f2c5d9436498-a88ea50e-50f7-11e3-969d-009c5fda0a25';
+    </script>
 </head>
 <body>
 
@@ -73,6 +75,7 @@
 
     <script src="static/js/filters/emFilters.js"></script>
 
+    <script src="static/js/services/analytics.js"></script>
     <script src="static/js/services/emServices.js"></script>
     <script src="static/js/services/errorHandler.js"></script>
     <script src="static/js/services/httpHandler.js"></script>
@@ -87,6 +90,7 @@
     <script src="static/lib/idangerous/idangerous.swiper-2.3.js"></script>
 
     <script src="static/lib/fastclick.js"></script>
+    <script src="static/lib/localytics.js"></script>
     <script>
         window.addEventListener('load', function() {
             FastClick.attach(document.body);
