Beginnings of less reboot

--- a/frontend/core/src/main/webapp/index_devel.html
+++ b/frontend/core/src/main/webapp/index_devel.html
@@ -13,9 +13,7 @@
 </head>
 <body>
 
-    <div class="container em-page">
-        <div ng-view></div>
-    </div>
+    <div role="main" ng-view/>
 
     <script src="static/lib/jquery/jquery.js"></script>
     <script src="static/lib/jquery/jquery.cookie.js"></script>
