--- a/frontend/core/src/main/webapp/index_devel.html
+++ b/frontend/core/src/main/webapp/index_devel.html
@@ -10,7 +10,6 @@
     <link rel="stylesheet/less" href="static/less/em.less"/>
     <script src="static/lib/less/less-min.js"></script>
     <link rel="shortcut icon" href="landing/favicon.ico"/>
-
 </head>
 <body>
 
@@ -73,6 +72,7 @@
 
     <script src="static/js/filters/emFilters.js"></script>
 
+    <script src="static/js/services/analytics.js"></script>
     <script src="static/js/services/emServices.js"></script>
     <script src="static/js/services/errorHandler.js"></script>
     <script src="static/js/services/httpHandler.js"></script>
@@ -85,8 +85,9 @@
     <script src="static/js/services/authenticate.js"></script>
 
     <script src="static/lib/idangerous/idangerous.swiper-2.3.js"></script>
-
     <script src="static/lib/fastclick.js"></script>
+    <script src="static/lib/localytics.js"></script>
+    
     <script>
         window.addEventListener('load', function() {
             FastClick.attach(document.body);
