Project slides structure.

--- a/frontend/core/src/main/webapp/index_devel.html
+++ b/frontend/core/src/main/webapp/index_devel.html
@@ -63,6 +63,7 @@
     <script src="static/js/controllers/tasks/inbox.js"></script>
     <script src="static/js/controllers/tasks/new.js"></script>
     <script src="static/js/controllers/tasks/project.js"></script>
+    <script src="static/js/controllers/tasks/projects.js"></script>
 
     <script src="static/js/directives/emDirectives.js"></script>
     <script src="static/js/directives/items.js"></script>
