--- a/frontend/core/src/main/webapp/index.html
+++ b/frontend/core/src/main/webapp/index.html
@@ -16,9 +16,7 @@
 </head>
 <body>
 
-  <div class="container em-page">
-    <div ng-view></div>
-  </div>
+  <div role="main" ng-view/>
 
   <script src="static/em.min.js"></script>
   <script>
