Organized javascript files to modules

--- a/frontend/core/src/main/webapp/index_devel.html
+++ b/frontend/core/src/main/webapp/index_devel.html
@@ -32,48 +32,48 @@
 
     <script src="static/lib/base64.js"></script>
 
-    <script src="static/js/app.js"></script>
+    <script src="static/modules/app.js"></script>
 
     <script src="test/e2e/devApp.js"></script>
     <script src="test/mockHelpers.js"></script>
 
-    <script src="static/js/controllers/account.js"></script>
-    <script src="static/js/controllers/home.js"></script>
-    <script src="static/js/controllers/items.js"></script>
-    <script src="static/js/controllers/login.js"></script>
-    <script src="static/js/controllers/home.js"></script>
-    <script src="static/js/controllers/navbar.js"></script>
-    <script src="static/js/controllers/omniBar.js"></script>
-    <script src="static/js/controllers/pageNotFound.js"></script>
-    <script src="static/js/controllers/signup.js"></script>
+    <script src="static/modules/account/accountController.js"></script>
+    <script src="static/modules/main/homeController.js"></script>
+    <script src="static/modules/main/itemsController.js"></script>
+    <script src="static/modules/entry/loginController.js"></script>
+    <script src="static/modules/main/homeController.js"></script>
+    <script src="static/modules/main/navbarController.js"></script>
+    <script src="static/modules/main/omniBarController.js"></script>
+    <script src="static/modules/common/pageNotFoundController.js"></script>
+    <script src="static/modules/entry/signupController.js"></script>
 
-    <script src="static/js/controllers/tasks/context.js"></script>
-    <script src="static/js/controllers/tasks/dates.js"></script>
-    <script src="static/js/controllers/tasks/edit.js"></script>
-    <script src="static/js/controllers/tasks/inbox.js"></script>
-    <script src="static/js/controllers/tasks/list.js"></script>
-    <script src="static/js/controllers/tasks/new.js"></script>
-    <script src="static/js/controllers/tasks/project.js"></script>
-    <script src="static/js/controllers/tasks/projects.js"></script>
-    <script src="static/js/controllers/tasks/slides.js"></script>
+    <script src="static/modules/main/mainDirectives.js"></script>
+    <script src="static/modules/main/itemsDirectives.js"></script>
+    <script src="static/modules/main/swiperDirectives.js"></script>
 
-    <script src="static/js/directives/common.js"></script>
-    <script src="static/js/directives/items.js"></script>
-    <script src="static/js/directives/swiper.js"></script>
-    <script src="static/js/directives/tasks.js"></script>
+    <script src="static/modules/tasks/tasksDirectives.js"></script>
+    <script src="static/modules/tasks/context.js"></script>
+    <script src="static/modules/tasks/dates.js"></script>
+    <script src="static/modules/tasks/edit.js"></script>
+    <script src="static/modules/tasks/inbox.js"></script>
+    <script src="static/modules/tasks/list.js"></script>
+    <script src="static/modules/tasks/new.js"></script>
+    <script src="static/modules/tasks/project.js"></script>
+    <script src="static/modules/tasks/projects.js"></script>
+    <script src="static/modules/tasks/slides.js"></script>
 
-    <script src="static/js/filters/common.js"></script>
+    <script src="static/modules/common/commonFilters.js"></script>
 
-    <script src="static/js/services/analytics.js"></script>
-    <script src="static/js/services/authenticate.js"></script>
-    <script src="static/js/services/common.js"></script>
-    <script src="static/js/services/errorHandler.js"></script>
-    <script src="static/js/services/httpHandler.js"></script>
-    <script src="static/js/services/items.js"></script>
-    <script src="static/js/services/location.js"></script>
-    <script src="static/js/services/pageTitle.js"></script>
-    <script src="static/js/services/tags.js"></script>
-    <script src="static/js/services/tasks.js"></script>
+    <script src="static/modules/common/analyticsServices.js"></script>
+    <script src="static/modules/common/authenticateServices.js"></script>
+    <script src="static/modules/common/commonServices.js"></script>
+    <script src="static/modules/common/errorHandlerService.js"></script>
+    <script src="static/modules/common/httpServices.js"></script>
+    <script src="static/modules/common/itemsServices.js"></script>
+    <script src="static/modules/common/locationServices.js"></script>
+    <script src="static/modules/common/pageTitleService.js"></script>
+    <script src="static/modules/common/tagsService.js"></script>
+    <script src="static/modules/tasks/tasksServices.js"></script>
 
     <script src="static/lib/idangerous/idangerous.swiper-2.4.js"></script>
     <script src="static/lib/fastclick.js"></script>
