Fixed phonegap index.html and iOS status bar is now hidden.

--- a/frontend/phonegap/www/index.html
+++ b/frontend/phonegap/www/index.html
@@ -31,9 +31,7 @@
         </script>
     </head>
     <body>
-        <div class="container em-page">
-            <div ng-view></div>
-        </div>
+        <div role="main" ng-view/>
         
         <script src="static/em.min.js"></script>
         <script type="application/javascript">
