--- a/frontend/core/src/main/webapp/index_devel.html
+++ b/frontend/core/src/main/webapp/index_devel.html
@@ -32,48 +32,48 @@
 
     <script src="static/lib/base64.js"></script>
 
-    <script src="static/modules/app.js"></script>
+    <script src="static/app/app.js"></script>
 
     <script src="test/e2e/devApp.js"></script>
     <script src="test/mockHelpers.js"></script>
 
-    <script src="static/modules/base/commonFilters.js"></script>
-    <script src="static/modules/base/pageNotFoundController.js"></script>
-    <script src="static/modules/base/analyticsServices.js"></script>
-    <script src="static/modules/base/authenticateServices.js"></script>
-    <script src="static/modules/base/commonServices.js"></script>
-    <script src="static/modules/base/errorHandlerService.js"></script>
-    <script src="static/modules/base/httpServices.js"></script>
-    <script src="static/modules/base/itemsServices.js"></script>
-    <script src="static/modules/base/locationServices.js"></script>
-    <script src="static/modules/base/pageTitleService.js"></script>
-    <script src="static/modules/base/tagsService.js"></script>
+    <script src="static/app/base/commonFilters.js"></script>
+    <script src="static/app/base/pageNotFoundController.js"></script>
+    <script src="static/app/base/analyticsServices.js"></script>
+    <script src="static/app/base/authenticateServices.js"></script>
+    <script src="static/app/base/commonServices.js"></script>
+    <script src="static/app/base/errorHandlerService.js"></script>
+    <script src="static/app/base/httpServices.js"></script>
+    <script src="static/app/base/itemsServices.js"></script>
+    <script src="static/app/base/locationServices.js"></script>
+    <script src="static/app/base/pageTitleService.js"></script>
+    <script src="static/app/base/tagsService.js"></script>
 
-    <script src="static/modules/entry/loginController.js"></script>
-    <script src="static/modules/entry/signupController.js"></script>
+    <script src="static/app/entry/loginController.js"></script>
+    <script src="static/app/entry/signupController.js"></script>
 
-    <script src="static/modules/account/accountController.js"></script>
+    <script src="static/app/account/accountController.js"></script>
 
-    <script src="static/modules/tasks/tasksDirectives.js"></script>
-    <script src="static/modules/tasks/context.js"></script>
-    <script src="static/modules/tasks/dates.js"></script>
-    <script src="static/modules/tasks/edit.js"></script>
-    <script src="static/modules/tasks/inbox.js"></script>
-    <script src="static/modules/tasks/list.js"></script>
-    <script src="static/modules/tasks/new.js"></script>
-    <script src="static/modules/tasks/project.js"></script>
-    <script src="static/modules/tasks/projects.js"></script>
-    <script src="static/modules/tasks/slides.js"></script>
-    <script src="static/modules/tasks/tasksServices.js"></script>
+    <script src="static/app/tasks/tasksDirectives.js"></script>
+    <script src="static/app/tasks/context.js"></script>
+    <script src="static/app/tasks/dates.js"></script>
+    <script src="static/app/tasks/edit.js"></script>
+    <script src="static/app/tasks/inbox.js"></script>
+    <script src="static/app/tasks/list.js"></script>
+    <script src="static/app/tasks/new.js"></script>
+    <script src="static/app/tasks/project.js"></script>
+    <script src="static/app/tasks/projects.js"></script>
+    <script src="static/app/tasks/slides.js"></script>
+    <script src="static/app/tasks/tasksServices.js"></script>
 
-    <script src="static/modules/main/homeController.js"></script>
-    <script src="static/modules/main/itemsController.js"></script>
-    <script src="static/modules/main/homeController.js"></script>
-    <script src="static/modules/main/navbarController.js"></script>
-    <script src="static/modules/main/omniBarController.js"></script>
-    <script src="static/modules/main/mainDirectives.js"></script>
-    <script src="static/modules/main/itemsDirectives.js"></script>
-    <script src="static/modules/main/swiperDirectives.js"></script>
+    <script src="static/app/main/homeController.js"></script>
+    <script src="static/app/main/itemsController.js"></script>
+    <script src="static/app/main/homeController.js"></script>
+    <script src="static/app/main/navbarController.js"></script>
+    <script src="static/app/main/omniBarController.js"></script>
+    <script src="static/app/main/mainDirectives.js"></script>
+    <script src="static/app/main/itemsDirectives.js"></script>
+    <script src="static/app/main/swiperDirectives.js"></script>
 
     <script src="static/lib/idangerous/idangerous.swiper-2.4.js"></script>
     <script src="static/lib/fastclick.js"></script>
