Moved templates under app directory

--- a/frontend/core/src/main/webapp/static/app/main/tasksSlides.html
+++ b/frontend/core/src/main/webapp/static/app/main/tasksSlides.html
@@ -1,4 +1,4 @@
-<div class="slides-container">
+<div class="slides-container" data-tpl="tasksSlides">
   <div class="swiper-container main-slides" em-swiper-slider="horizontal">
     <div class="swiper-wrapper">
       <div class="swiper-slide" inbox></div>
