Major overhaul of swiper directives, slides can now be added dynamically without breaking swiper. Using ng-include in a few places instead of passthrough directive.

--- a/frontend/core/src/main/webapp/index_devel.html
+++ b/frontend/core/src/main/webapp/index_devel.html
@@ -21,7 +21,7 @@
     <script src="static/lib/jasmine/jasmine-jquery.js"></script>
 
     <script>
-        jasmine.getJSONFixtures().fixturesPath = 'test/json'
+        jasmine.getJSONFixtures().fixturesPath = 'test/json';
     </script>
 
     <script src="static/lib/angularjs/angular.js"></script>
@@ -37,6 +37,7 @@
     <script src="test/e2e/devApp.js"></script>
     <script src="test/mockHelpers.js"></script>
 
+    <script src="static/common/common.js"></script>
     <script src="static/common/DateService.js"></script>
     <script src="static/common/LocationService.js"></script>
 
@@ -49,9 +50,12 @@
     <script src="static/app/base/ErrorHandlerService.js"></script>
     <script src="static/app/base/FilterService.js"></script>
     <script src="static/app/base/OwnerService.js"></script>
+    <script src="static/app/base/SwiperService.js"></script>
     <script src="static/app/base/TagsService.js"></script>
     <script src="static/app/base/UserSessionService.js"></script>
     <script src="static/app/base/itemsServices.js"></script>
+    <script src="static/app/base/swiperContainerDirective.js"></script>
+    <script src="static/app/base/swiperSlideDirective.js"></script>
     <script src="static/app/base/tagTitleFilter.js"></script>
 
     <script src="static/app/auth/AuthenticationService.js"></script>
@@ -78,11 +82,11 @@
     <script src="static/app/main/InboxController.js"></script>
     <script src="static/app/main/HomeController.js"></script>
     <script src="static/app/main/ItemsController.js"></script>
+    <script src="static/app/main/MainController.js"></script>
     <script src="static/app/main/NavbarController.js"></script>
     <script src="static/app/main/OmniBarController.js"></script>
     <script src="static/app/main/mainDirectives.js"></script>
     <script src="static/app/main/itemsDirectives.js"></script>
-    <script src="static/app/main/swiperDirectives.js"></script>
     <script src="static/app/main/PageNotFoundController.js"></script>
 
     <script src="static/lib/idangerous/idangerous.swiper-2.4.js"></script>
