--- a/frontend/core/src/main/webapp/static/app/tasks/projects.html
+++ b/frontend/core/src/main/webapp/static/app/tasks/projects.html
@@ -2,9 +2,9 @@
   <div class="column">
     <header id="tasks-projects-header" class="feature-header" feature-header="projects"></header>
     <div id="tasks-projects-feature-content-container" class="content-container feature-content-container">
-      <div class="swiper-container vertical-slides" em-swiper-slider="vertical">
+      <div class="swiper-container vertical-slides" swiper-container="tasks/projects" swiper-type="page">
         <div class="swiper-wrapper">
-          <div class="swiper-slide" ng-repeat="project in tasks | tasksFilter:filterService.activeFilters.project" swiper-slide="{{project.uuid}}">
+          <div class="swiper-slide" ng-repeat="project in tasks | tasksFilter:filterService.activeFilters.project" swiper-slide="tasks/projects/{{project.uuid}}">
             <div class="inner-slide-content-container" project-slide></div>
           </div>
         </div>
