--- a/frontend/core/src/main/webapp/static/app/main/mainHeader.html
+++ b/frontend/core/src/main/webapp/static/app/main/mainHeader.html
@@ -7,14 +7,14 @@
   <div id="menu-content" ng-show="collapse">
     <ul>
       <li>
-        <a href="#/my" ng-click="setActiveUuid(user)">home</a>
+        <a href ng-click="setMyActive()">home</a>
       </li>
       <li ng-show="useCollectives()">
         <span>collectives</span>
         <ul>
           <li ng-repeat="(key, value) in collectives">
             <div ng-if="value[2] === false">
-              <a class="collective" href ng-click="setActiveUuid(key, true)">{{value[0]}}</a>
+              <a class="collective" href ng-click="setCollectiveActive(key)">{{value[0]}}</a>
             </div>
           </li>
         </ul>
