Deleted unnecessary controllers, moved controller declarations from route to template

--- a/frontend/core/src/main/webapp/static/app/account/account.html
+++ b/frontend/core/src/main/webapp/static/app/account/account.html
@@ -1,4 +1,4 @@
-<div class="em-slide" data-tpl="account">
+<div class="em-slide" data-tpl="account" ng-controller="AccountController">
 
   <div navbar>
     <h1 class="text-primary">account</h1>
