--- a/frontend/core/src/main/webapp/static/app/auth/login.html
+++ b/frontend/core/src/main/webapp/static/app/auth/login.html
@@ -1,4 +1,4 @@
-<div class="no-slides-container" data-tpl="login">
+<div class="no-slides-container" ng-controller="LoginController" data-tpl="login">
   <section id="login" class="one-column-grid fixed-height page">
     <div class="column">
       <div class="banner">
