--- a/frontend/core/src/main/webapp/static/app/main/inbox.html
+++ b/frontend/core/src/main/webapp/static/app/main/inbox.html
@@ -1,4 +1,4 @@
-<section id="inbox" class="two-column-grid page" data-tpl="inbox">
+<section id="inbox" class="two-column-grid page" ng-controller="InboxController" data-tpl="inbox">
   <div class="column">
     <header class="feature-header" feature-header="inbox"></header>
     <div id="inbox-feature-content-container" class="content-container feature-content-container">
