--- a/frontend/core/src/main/webapp/static/app/auth/signup.html
+++ b/frontend/core/src/main/webapp/static/app/auth/signup.html
@@ -1,4 +1,4 @@
-<div class="row em-scrollable" data-tpl="signup">
+<div class="row em-scrollable" data-tpl="signup" ng-controller="SignupController">
   <div class="row center-block em-logo-with-text">
     <img class="center-block" src="static/img/em_logo_with_text.png"/>
     <h1 class="text-primary"><span>extended mind</span></h1>
