Reverted data-tpl attribute as a bad idea. It is essentially a comment that doesn't look like a comment, so no one would have understood to change it when the template name changed.

--- a/frontend/core/src/main/webapp/static/app/account/account.html
+++ b/frontend/core/src/main/webapp/static/app/account/account.html
@@ -1,4 +1,4 @@
-<div class="em-slide" data-tpl="account" ng-controller="AccountController">
+<div class="em-slide" ng-controller="AccountController">
 
   <div navbar>
     <h1 class="text-primary">account</h1>
