--- a/frontend/core/src/main/webapp/static/app/base/errorMessage.html
+++ b/frontend/core/src/main/webapp/static/app/base/errorMessage.html
@@ -1,4 +1,4 @@
-<div class="alert alert-error error-alert-bar" ng-show="errorMessage" data-tpl="errorMessage">
+<div class="alert alert-error error-alert-bar" ng-show="errorMessage">
 
   <span class="text-danger">
     {{errorMessage}}
