--- a/frontend/core/src/main/webapp/static/app/base/featureHeader.html
+++ b/frontend/core/src/main/webapp/static/app/base/featureHeader.html
@@ -1,4 +1,4 @@
-<nav id="feature-header" role="navigation" data-tpl="featureHeader">
+<nav id="feature-header" role="navigation">
   <div class="left-of-three" id="collective">&nbsp;</div>
   <div class="center-of-three" id="feature-heading"><h3>{{feature}}</h3></div>
   <div class="right-of-three" id="add-new-button">
