--- a/frontend/core/src/main/webapp/static/app/main/footer.html
+++ b/frontend/core/src/main/webapp/static/app/main/footer.html
@@ -1,4 +1,4 @@
-<nav class="{{feature}}-footer swiper-no-swiping" role="navigation" data-tpl="footer">
+<nav class="{{feature}}-footer swiper-no-swiping" role="navigation">
   <ul class="horizontally-justified">
     <li id="inbox-link" class="justified-element">
       <a href ng-click="gotoInbox()">
