--- a/frontend/core/src/main/webapp/static/app/main/item.html
+++ b/frontend/core/src/main/webapp/static/app/main/item.html
@@ -1,4 +1,4 @@
-<section class="item" data-tpl="item">
+<section class="item">
   <div ng-click="toggleItemContent()">
     <span>{{item.title}}</span>
   </div>
