--- a/frontend/core/src/main/webapp/static/app/main/itemContent.html
+++ b/frontend/core/src/main/webapp/static/app/main/itemContent.html
@@ -1,4 +1,4 @@
-<div ng-switch="itemType" data-tpl="itemContent">
+<div ng-switch="itemType">
   <div class="item-sorting-container" ng-switch-default>
     <ul class="button-row">
       <li class="button-container left-of-three">
