--- a/frontend/core/src/main/webapp/static/app/main/mainHeader.html
+++ b/frontend/core/src/main/webapp/static/app/main/mainHeader.html
@@ -1,4 +1,4 @@
-<nav role="navigation" data-tpl="mainHeader">
+<nav role="navigation">
   <div id="menu-icon">
     <button id="menu-button" type="button" ng-click="collapseNavbar()" alt="menu">
       <span class="icon-menu"></span>
