--- a/frontend/core/src/main/webapp/static/app/main/omniBar.html
+++ b/frontend/core/src/main/webapp/static/app/main/omniBar.html
@@ -1,4 +1,4 @@
-<form id="omnibar" role="form" name="addOmniItem" ng-submit="addNewItem(newItem)" data-tpl="omniBar">
+<form id="omnibar" role="form" name="addOmniItem" ng-submit="addNewItem(newItem)">
 
   <div class="form-group">
 
