--- a/frontend/core/src/main/webapp/static/app/main/pageNotFound.html
+++ b/frontend/core/src/main/webapp/static/app/main/pageNotFound.html
@@ -1,6 +1,13 @@
-<div data-tpl="pageNotFound">
+<div>
   <h3>extended mind</h3>
-  <div url-list></div>
+
+  <div>
+    <ul class="list-inline">
+      <li>
+        <h2><a class="text-muted" href="#/{{prefix}}/tasks/home">tasks</a></h2>
+      </li>
+    </ul>
+  </div>
 
   <p>
     &nbsp;
