--- a/frontend/core/src/main/webapp/static/app/main/tasksSlides.html
+++ b/frontend/core/src/main/webapp/static/app/main/tasksSlides.html
@@ -1,4 +1,4 @@
-<div class="slides-container" ng-controller="MainController" data-tpl="tasksSlides">
+<div class="slides-container" ng-controller="MainController">
   <div class="swiper-container main-slides" swiper-container="tasks" swiper-type="main">
     <div class="swiper-wrapper">
       <div class="swiper-slide" swiper-slide="tasks/inbox" ng-include="'static/app/main/inbox.html'"></div>
