--- a/frontend/core/src/main/webapp/static/app/tasks/context.html
+++ b/frontend/core/src/main/webapp/static/app/tasks/context.html
@@ -1,4 +1,4 @@
-<div class="no-slides-container" data-tpl="context">
+<div class="no-slides-container">
   <section id="task-context" class="one-column-grid page">
     <div class="column">
       <header class="heading-header">
