--- a/frontend/core/src/main/webapp/static/app/tasks/dateSlide.html
+++ b/frontend/core/src/main/webapp/static/app/tasks/dateSlide.html
@@ -1,4 +1,4 @@
-<section class="date" data-tpl="dateSlide">
+<section class="date">
   <h3>{{date.displayDate}}</h3>
   <div tasks-list="tasks" subtask="subtaskWithDate" tasks-filter="filter"></div>
 </section>
