--- a/frontend/core/src/main/webapp/static/app/tasks/datebar.html
+++ b/frontend/core/src/main/webapp/static/app/tasks/datebar.html
@@ -1,4 +1,4 @@
-<table data-tpl="datebar">
+<table>
   <tbody>
     <tr>
       <td ng-repeat="date in dates"><a class="text-muted" href ng-click="dateClicked(date.yyyymmdd)">{{date.displayDateShort}}</a></td>
