--- a/frontend/core/src/main/webapp/static/app/tasks/dates.html
+++ b/frontend/core/src/main/webapp/static/app/tasks/dates.html
@@ -1,4 +1,4 @@
-<section id="tasks-dates" class="two-column-grid page" data-tpl="dates" ng-controller="DatesController">
+<section id="tasks-dates" class="two-column-grid page" ng-controller="DatesController">
   <div class="column">
     <header id="tasks-dates-header" class="feature-header" feature-header="dates"></header>
     <div id="tasks-dates-feature-content-container" class="content-container feature-content-container">
