--- a/frontend/core/src/main/webapp/static/app/tasks/filteredTasksList.html
+++ b/frontend/core/src/main/webapp/static/app/tasks/filteredTasksList.html
@@ -1,4 +1,4 @@
-<div ng-show="tasksListFilter && filteredTasks.length" data-tpl="filteredTaskList">
+<div ng-show="tasksListFilter && filteredTasks.length">
 
   <h3><a class="text-muted" href ng-click="gotoTasks()">tasks</a></h3>
 
