--- a/frontend/core/src/main/webapp/static/app/tasks/lists.html
+++ b/frontend/core/src/main/webapp/static/app/tasks/lists.html
@@ -1,4 +1,4 @@
-<section id="tasks-lists" class="two-column-grid page" data-tpl="lists">
+<section id="tasks-lists" class="two-column-grid page">
   <div class="column">
     <header id="tasks-lists-header" class="feature-header" feature-header="lists"></header>
     <div id="tasks-lists-feature-content-container" class="content-container feature-content-container">
