--- a/frontend/core/src/main/webapp/static/app/tasks/projectContent.html
+++ b/frontend/core/src/main/webapp/static/app/tasks/projectContent.html
@@ -1,4 +1,4 @@
-<div class="em-item-actions container" data-tpl="projectContent">
+<div class="em-item-actions container">
   <ul class="nav nav-justified em-horizontal-buttons">
     <li class="em-gray-button" ng-hide="mainlinksFilter">
       <button class="em-simple-input" type="button" ng-hide="task.relationships.parentTask" ng-click="editProject()">
