--- a/frontend/core/src/main/webapp/static/app/tasks/projects.html
+++ b/frontend/core/src/main/webapp/static/app/tasks/projects.html
@@ -1,4 +1,4 @@
-<section id="tasks-projects" class="two-column-grid page" data-tpl="projects">
+<section id="tasks-projects" class="two-column-grid page">
   <div class="column">
     <header id="tasks-projects-header" class="feature-header" feature-header="projects"></header>
     <div id="tasks-projects-feature-content-container" class="content-container feature-content-container">
