--- a/frontend/core/src/main/webapp/static/app/tasks/singleTasks.html
+++ b/frontend/core/src/main/webapp/static/app/tasks/singleTasks.html
@@ -1,4 +1,4 @@
-<section id="tasks-single" class="two-column-grid page" data-tpl="singleTasks">
+<section id="tasks-single" class="two-column-grid page">
   <div class="column">
     <header id="tasks-lists-header" class="feature-header" feature-header="single tasks"></header>
     <div id="tasks-single-feature-content-container" class="content-container feature-content-container">
