--- a/frontend/core/src/main/webapp/static/app/tasks/taskContent.html
+++ b/frontend/core/src/main/webapp/static/app/tasks/taskContent.html
@@ -1,4 +1,4 @@
-<ul class="list-unstyled" data-tpl="taskContent">
+<ul class="list-unstyled">
 
   <li ng-repeat="value in task | visibleTaskContent">
     <span><small>{{value}}</small></span>
