--- a/frontend/core/src/main/webapp/static/app/main/filteredItemsList.html
+++ b/frontend/core/src/main/webapp/static/app/main/filteredItemsList.html
@@ -1,4 +1,4 @@
-<div ng-show="itemsListFilter && filteredItems.length" data-tpl="filteredItemsList">
+<div ng-show="itemsListFilter && filteredItems.length">
   <h3><a class="text-muted" href ng-click="gotoInbox()">inbox</a></h3>
   <ul class="list-unstyled">
     <li ng-class="selected" ng-repeat="item in filteredItems = (items | filter:{title:itemsListFilter})">
