--- a/frontend/core/src/main/webapp/static/app/main/home.html
+++ b/frontend/core/src/main/webapp/static/app/main/home.html
@@ -1,4 +1,4 @@
-<section id="home" class="one-column-grid page" ng-controller="HomeController" data-tpl="home">
+<section id="home" class="one-column-grid page" ng-controller="HomeController">
   <div class="column">
     <header ng-hide="omniBarActive" main-header id="main-header"></header>
     <div id="main-content-container" class="content-container">
