--- a/frontend/core/src/main/webapp/static/app/tasks/date.html
+++ b/frontend/core/src/main/webapp/static/app/tasks/date.html
@@ -1,1 +1,1 @@
-<input type="date" id="taskDue" class="form-control em-simple-input" ng-model="task.due" data-tpl="date">
+<input type="date" id="taskDue" class="form-control em-simple-input" ng-model="task.due">
