--- a/frontend/core/src/main/webapp/static/app/tasks/editTaskContent.html
+++ b/frontend/core/src/main/webapp/static/app/tasks/editTaskContent.html
@@ -1,4 +1,4 @@
-<form class="form-horizontal" role="form" name="taskEdit" data-tpl="editTaskContent">
+<form class="form-horizontal" role="form" name="taskEdit">
 
   <div class="form-group">
     <label class="sr-only" for="taskTitle">title</label>
