--- a/frontend/core/src/main/webapp/static/app/tasks/newTask.html
+++ b/frontend/core/src/main/webapp/static/app/tasks/newTask.html
@@ -1,4 +1,4 @@
-<div class="no-slides-container" data-tpl="newTask">
+<div class="no-slides-container">
   <section id="new-task" class="one-column-grid page">
     <div class="column">
       <header class="heading-header">
