--- a/frontend/core/src/main/webapp/static/app/tasks/task.html
+++ b/frontend/core/src/main/webapp/static/app/tasks/task.html
@@ -1,4 +1,4 @@
-<div data-tpl="task">
+<div>
 
   <input type="checkbox" name="checkbox" id="{{task.uuid}}" class="input-checkbox" ng-checked="task.completed" ng-click="taskChecked(task)" />
   <label class="task checkbox swiper-no-swiping" id="{{task.uuid}}" for="{{task.uuid}}"></label>
