--- a/frontend/core/src/main/webapp/static/app/tasks/dates.html
+++ b/frontend/core/src/main/webapp/static/app/tasks/dates.html
@@ -5,8 +5,7 @@
       <div class="swiper-no-swiping" id="date-picker" ng-include="'static/app/tasks/datebar.html'"></div>
       <div class="swiper-container vertical-slides" swiper-container="tasks/dates" swiper-type="page">
         <div class="swiper-wrapper">
-          <div class="swiper-slide" ng-repeat="date in dates" swiper-slide="tasks/dates/{{date.yyyymmdd}}">
-            <div class="inner-slide-content-container" date-slide="date" date-tasks="tasks"></div>
+          <div class="swiper-slide" ng-repeat="date in dates" date-slide swiper-slide="tasks/dates/{{date.yyyymmdd}}" expected-slides="dates.length">
           </div>
         </div>
       </div>
