--- a/frontend/core/src/main/webapp/static/app/tasks/projects.html
+++ b/frontend/core/src/main/webapp/static/app/tasks/projects.html
@@ -4,8 +4,7 @@
     <div id="tasks-projects-feature-content-container" class="content-container feature-content-container">
       <div class="swiper-container vertical-slides" swiper-container="tasks/projects" swiper-type="page">
         <div class="swiper-wrapper">
-          <div class="swiper-slide" ng-repeat="project in tasks | tasksFilter:filterService.activeFilters.project" swiper-slide="tasks/projects/{{project.uuid}}">
-            <div class="inner-slide-content-container" project-slide></div>
+          <div class="swiper-slide" ng-repeat="project in projects = (tasks | tasksFilter:filterService.activeFilters.project)" project-slide swiper-slide="tasks/projects/{{project.uuid}}" expected-slides="projects.length">
           </div>
         </div>
       </div>
