Removed unneeded directives, joined templates

--- a/frontend/core/src/main/webapp/static/app/main/home.html
+++ b/frontend/core/src/main/webapp/static/app/main/home.html
@@ -1,6 +1,37 @@
 <section id="home" class="one-column-grid page" ng-controller="HomeController">
   <div class="column">
-    <header ng-hide="omniBarActive" main-header id="main-header"></header>
+    <header ng-hide="omniBarActive" id="main-header">
+      <nav role="navigation" ng-controller="NavbarController">
+        <div id="menu-icon">
+          <button id="menu-button" type="button" ng-click="collapseNavbar()" alt="menu">
+            <span class="icon-menu"></span>
+          </button>
+        </div>
+        <div id="menu-content" ng-show="collapse">
+          <ul>
+            <li>
+              <a href ng-click="setMyActive()">home</a>
+            </li>
+            <li ng-show="useCollectives()">
+              <span>collectives</span>
+              <ul>
+                <li ng-repeat="(key, value) in collectives">
+                  <div ng-if="value[2] === false">
+                    <a class="collective" href ng-click="setCollectiveActive(key)">{{value[0]}}</a>
+                  </div>
+                </li>
+              </ul>
+            </li>
+            <li>
+              <a href="#/my/account">account</a>
+            </li>
+            <li>
+              <a href="" ng-click="logout()">logout</a>
+            </li>
+          </ul>
+        </div>
+      </nav>
+    </header>
     <div id="main-content-container" class="content-container">
       <div ng-hide="omniBarActive" class="banner">
         <span class="icon-logo_only" />
