--- a/frontend/core/src/main/webapp/static/app/main/omniBar.html
+++ b/frontend/core/src/main/webapp/static/app/main/omniBar.html
@@ -4,7 +4,7 @@
 
     <div id="omni-input-wrapper">
       <label class="sr-only" for="omniItem">omniItem</label>
-      <input type="search" class="simple-input form-control" id="omniItem" ng-model="newItem.title" ng-focus="omniBarFocus(true)" ng-blur="omniBarFocus(false)" placeholder="store / recall" required>
+      <input type="search" class="simple-input form-control" id="omniItem" ng-model="newItem.title" ng-focus="omniBarFocus(true)" ng-blur="omniBarFocus(false)" placeholder="store or recall" required>
     </div>
     <div id="plus-wrapper">
       <button class="button" type="button" ng-disabled="!newItem.title" ng-click="addNewItem(newItem)"><span class="icon-plus" />
