--- a/frontend/core/src/main/webapp/static/app/tasks/editTaskContent.html
+++ b/frontend/core/src/main/webapp/static/app/tasks/editTaskContent.html
@@ -8,7 +8,7 @@
   <div ng-switch="showDate">
 
     <div ng-switch-default>
-      <span class="input-placeholder" ng-click="focusDate()">select date...</span>
+      <span class="simple-input text-gray" ng-click="focusDate()">select date...</span>
     </div>
 
     <div ng-switch-when="date">
