Added accordion implementation to inbox

--- a/frontend/core/src/main/webapp/index_devel.html
+++ b/frontend/core/src/main/webapp/index_devel.html
@@ -38,6 +38,8 @@
     <script src="test/mockHelpers.js"></script>
 
     <script src="static/common/common.js"></script>
+    <script src="static/common/accordionDirective.js"></script>
+    <script src="static/common/accordionItemDirective.js"></script>
     <script src="static/common/DateService.js"></script>
     <script src="static/common/LocationService.js"></script>
 
