--- a/frontend/core/src/main/webapp/static/app/main/inbox.html
+++ b/frontend/core/src/main/webapp/static/app/main/inbox.html
@@ -2,11 +2,11 @@
   <div class="column">
     <header class="feature-header" feature-header="inbox"></header>
     <div id="inbox-feature-content-container" class="content-container feature-content-container">
-      <ul class="inner-feature-content-container">
-        <li ng-class="selected" ng-repeat="item in items" ng-controller="ItemsController">
-          <div item></div>
-        </li>
-      </ul>
+      <div class="inner-feature-content-container" accordion>
+        <div ng-repeat="item in items" ng-controller="ItemsController" accordion-item heading="{{item.title}}" >
+          <div item-content></div>
+        </div>
+      </div>
     </div>
   </div>
   <aside class="column">
